--- a/webpack/package.json
+++ b/webpack/package.json
@@ -11,13 +11,20 @@
   "babel": {
     "presets": [
       "@babel/preset-env",
-      "@babel/preset-react"
+      "@babel/preset-react",
+      "@babel/preset-typescript"
     ]
   },
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
     "@babel/core": "^7.2.2",
+    "@babel/plugin-proposal-class-properties": "^7.3.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.3.2",
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.1.0",
+    "@types/react": "^16.8.3",
+    "@types/react-dom": "^16.8.1",
     "babel-loader": "^8.0.5",
     "react-hot-loader": "^4.6.5",
     "webpack": "^4.29.3",
