--- a/package.json
+++ b/package.json
@@ -26,8 +26,11 @@
     "@types/react": "^16.8.3",
     "@types/react-dom": "^16.8.1",
     "babel-loader": "^8.0.5",
+    "css-loader": "^2.1.0",
     "react-hot-loader": "^4.6.5",
-    "webpack": "^4.29.3",
+    "sass-loader": "^7.1.0",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.29.4",
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
   },
