Add in required node-sass

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/react-dom": "^16.8.1",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
+    "node-sass": "^4.11.0",
     "react-hot-loader": "^4.6.5",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
