--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --config ./webpack.config.js --mode development",
-    "build": "webpack --config ./webpack.config.js --mode production"
+    "build": "webpack --config ./webpack.config.js --mode production",
+    "live-server": "./node_modules/.bin/live-server --port=5000 dist"
   },
   "author": "",
   "license": "ISC",
@@ -28,6 +29,7 @@
     "@types/react-dom": "^16.8.1",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
+    "live-server": "^1.2.1",
     "node-sass": "^4.11.0",
     "react-hot-loader": "^4.6.5",
     "sass-loader": "^7.1.0",
