--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "@babel/preset-env": "^7.3.1",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.1.0",
+    "@types/node": "^11.9.4",
     "@types/react": "^16.8.3",
     "@types/react-dom": "^16.8.1",
+    "@types/webpack-env": "^1.13.7",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
     "live-server": "^1.2.1",
