Renaming webpack-react-typescript-starter

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simple-react-tsx",
+  "name": "webpack-react-typescript-starter",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
