--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "@types/webpack-env": "^1.13.7",
     "babel-loader": "^8.0.5",
     "css-loader": "^2.1.0",
+    "html-loader": "^0.5.5",
+    "html-webpack-plugin": "^3.2.0",
     "live-server": "^1.2.1",
     "node-sass": "^4.11.0",
     "react-hot-loader": "^4.6.5",
