--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config ./webpack.config.js --mode development",
+    "start": "webpack-dev-server --config ./webpack.config.js --mode development --hot",
     "build": "webpack --config ./webpack.config.js --mode production",
     "live-server": "./node_modules/.bin/live-server --port=5000 dist",
     "lint": "tslint -p tslint.json"
