--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "css-loader": "^2.1.0",
     "html-webpack-plugin": "^3.2.0",
     "live-server": "^1.2.1",
+    "mini-css-extract-plugin": "^0.5.0",
     "node-sass": "^4.11.0",
     "react-hot-loader": "^4.6.5",
     "sass-loader": "^7.1.0",
